--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="col-4">
             <div class="scale text-center">
               <figure>
-                <img src="./assets/images/layer1.png" title="scalable" alt="team">
+                <img src="./assets/images/Layer1.png" title="scalable" alt="team">
               </figure>
               <h3>scalable</h3>
               <p>Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
@@ -88,7 +88,7 @@
           <div class="col-4">
             <div class="scale text-center">
               <figure>
-                <img src="./assets/images/layer2.png" title="instant" alt="team">
+                <img src="./assets/images/Layer2.png" title="instant" alt="team">
               </figure>
               <h3>instant</h3>
               <p>Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
@@ -97,7 +97,7 @@
           <div class="col-4">
             <div class="scale text-center">
               <figure>
-                <img src="./assets/images/layer3.png" title="something" alt="team">
+                <img src="./assets/images/Layer3.png" title="something" alt="team">
               </figure>
               <h3>something</h3>
               <p>Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
